# 4.7coin

./: .env.example  .gitignore  EXPLORATION_REPORT.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/quantsage/: __init__.py  config.py  exceptions.py  main.py
backend/quantsage/api/: deps.py
backend/quantsage/api/routes/: __init__.py  admin.py  auth.py  backtest.py  health.py  orchestrator_state.py  positions.py  strategies.py
backend/quantsage/backtest/: __init__.py  engine.py  metrics.py  report.py  simulator.py
backend/quantsage/db/: __init__.py  models.py  session.py
backend/quantsage/exchanges/: __init__.py  base.py  factory.py  upbit.py
backend/quantsage/execution/: __init__.py  dry_run.py  live.py
backend/quantsage/features/: __init__.py  engineering.py  regime.py
backend/quantsage/indicators/: __init__.py  indicators.py
backend/quantsage/llm/: __init__.py  regime_judge.py
backend/quantsage/market_data/: __init__.py  storage.py
backend/quantsage/models/: __init__.py  lstm.py  xgb.py
backend/quantsage/notifications/: __init__.py  telegram.py
backend/quantsage/orchestrator/: __init__.py  main_loop.py
backend/quantsage/risk/: __init__.py  aggregator.py  black_swan.py  drawdown_guard.py  kill_switch.py  position_sizer.py
backend/quantsage/strategies/: __init__.py  base.py  breakout.py  dca_smart.py  ensemble_voter.py  grid.py  mean_reversion.py  ml_predictor.py  trend_following.py
backend/quantsage/utils/: crypto.py  logger.py  timez.py
backend/tests/unit/: test_backtest.py  test_features.py  test_indicators.py  test_live_execution.py  test_ml.py  test_risk.py  test_strategies.py  test_walk_forward.py
docs/: API_KEYS_GUIDE.md  ARCHITECTURE.md  DEPLOYMENT.md  RISK_POLICY.md  RUNBOOK.md  STRATEGIES.md
frontend/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
scripts/: deploy.sh  seed_historical.py  tax_export.py  train_xgb.py  (+1 more)
(+85 files in other folders)
